# breviarium

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dioxus.toml  README.md
crates/breviarium-data/: Cargo.toml
crates/breviarium-data/data/: phrases.yaml
crates/breviarium-data/data/books/: commons.yaml  martyrology.yaml  ordinary.yaml  psalm.yaml  psalter.yaml  sanctoral.yaml  temporal.yaml
crates/breviarium-data/data/corpus/: commons.yaml  martyrology.yaml  ordinary.yaml  psalms.yaml  psalter.yaml
crates/breviarium-data/data/lexicon/: commons.yaml  martyrology.yaml  ordinary.yaml  psalms.yaml  psalter.yaml
crates/breviarium-data/data/profiles/: roman-1960.yaml
crates/breviarium-data/data/rites/: roman.yaml
crates/breviarium-data/data/sources/: commons.yaml  martyrology.yaml  ordinary.yaml  propers-sanctoral.yaml  propers-temporal.yaml  psalms.yaml  psalter.yaml
crates/breviarium-data/en2/: manifest.json
crates/breviarium-data/src/: calendar.rs  catalog.rs  lib.rs  model.rs  resolve.rs  schema.rs  slots.rs
crates/breviarium-data/tests/golden/: .gitignore
crates/breviarium-data/tools/: en2.py  zh_merge.py  zh_pilot_select.py  zh_translate.workflow.js
crates/breviarium-data/zh/: glossary-stats.txt  glossary.md  manifest.json
crates/breviarium-data/zh/full/: chunk-0000.json  chunk-0001.json  chunk-0002.json  chunk-0003.json  chunk-0004.json  chunk-0005.json  chunk-0006.json  chunk-0007.json  chunk-0008.json  chunk-0009.json  chunk-0010.json  chunk-0012.json  chunk-0013.json  chunk-0014.json  chunk-0015.json  chunk-0016.json  chunk-0017.json  (+42 more)
(+15 files in other folders)
