[package]
name = "breviarium"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/breviarium-data"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["std"] }
dioxus = "0.7.0"
include_dir = { version = "0.7.4", features = ["glob"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
yaml_serde = "0.10.4"

[dependencies]
breviarium-data = { path = "crates/breviarium-data", optional = true }
chrono = { workspace = true, features = ["clock"], optional = true }
dioxus = { workspace = true, features = ["fullstack", "router"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
server = ["dioxus/server", "dep:breviarium-data", "dep:chrono"]
web = ["dioxus/web"]

[profile.dev]
opt-level = 1
